nlp-services/consumer-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      imagePullSecrets:
        - name: itechops-docker-registry-secret
      containers:
        - name: consumer
          imagePullPolicy: Always
          image: itechops.azurecr.io/itechops-nlp-service-consumer:v2
          # command: ["./boot.sh"]
          resources:
            limits:
              cpu: "1000m"
              memory: 4Gi
            requests:
              cpu: "100m"
              memory: 500Mi
          ports:
            - containerPort: 8000
      volumes:
        - name: nlp-env-secret
          secret:
            secretName: nlp-env-secret
            defaultMode: 0444      
---
apiVersion: v1
kind: Service
metadata:
  name: consumer
spec:
  selector:
    app: consumer
  ports:
    - name: http
      port: 8000
      targetPort: 8000
