nlp-services/nlp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlp-ingress
  labels:
    name: nlp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m 
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nlp-eu.dev.itechops.com
    secretName: nlp-eu.dev-authores-tls
  rules:
    - host: nlp-eu.dev.itechops.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nlp-api
                port:
                  number: 80
